docs: 重新生成 swagger 信息
